--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "framer-motion": "^6.5.1",
     "next": "^12.1.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "three": "^0.144.0"
   },
   "devDependencies": {
     "eslint": "^8.18.0",
