--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "next dev -H 0.0.0.0",
     "build": "next build",
-    "prettier": "prettier -write .",
+    "format-check": "pretty-quick --check --pattern \"**/*.*js\"",
+    "format": "pretty-quick --verbose  --pattern \"**/*.*js\"",
     "lint": "next lint"
   },
   "repository": {
@@ -28,6 +29,7 @@
     "@use-it/interval": "^1.0.0",
     "framer-motion": "^6.5.1",
     "next": "^12.1.6",
+    "pretty-quick": "^3.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
@@ -35,7 +37,7 @@
     "three": "^0.144.0"
   },
   "devDependencies": {
-    "eslint": "^8.18.0",
+    "eslint": "^8.41.0",
     "eslint-config-next": "^12.1.6",
     "prettier": "^2.7.1"
   }
