--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-scroll": "^1.8.9",
     "react-typing-effect": "^2.0.5",
     "three": "^0.144.0"
   },
