--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "git+https://github.com/Mauro-jpg/porfolio.git"
   },
   "keywords": [],
-  "author": "Mauro Nievas<niev.mauro@gmail.com>",
+  "author": "Mauro Nievas <niev.mauro@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Mauro-jpg/porfolio/issues"
@@ -38,8 +38,10 @@
     "three": "^0.144.0"
   },
   "devDependencies": {
-    "eslint": "^8.41.0",
+    "eslint": "^8.44.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-config-next": "^12.1.6",
+    "eslint-plugin-react": "^7.32.2",
     "prettier": "^2.7.1"
   }
 }
